--- a/my.html
+++ b/my.html
@@ -90,9 +90,22 @@
                     <section>
                         <h3>JPEG Sprite + CSS Animation</h3>
                         <p>Анимация</p>
+                        <p><b>1 Мб</b></p>
                     </section>
                     <section>
                         <h3>HTML5 Video</h3>
+                        <video autoplay="true" preload="auto" loop="true">
+                            <source type="video/webm" src="static/video.webm" />
+                            <source type="video/webm" src="static/video.mp4" />
+                        </video>
+                        <p><b>~700 Кб</b></p>
+                    </section>
+                    <section>
+                        <h3>HTML5 Video vs JPEG Sprite</h3>
+                        <video autoplay="true" preload="auto" loop="true">
+                            <source type="video/webm" src="static/video.webm" />
+                            <source type="video/webm" src="static/video.mp4" />
+                        </video>
                         <p>Сравнение анимаций: Video vs. sprite</p>
                     </section>
                 </section>
