--- a/my.html
+++ b/my.html
@@ -167,7 +167,7 @@
             <pre>
             <code style="font-size: 40px !important;" data-trim>
 var $video = $('#js-video'),
-    $canvas = $('#js-video-canvas');
+    $canvas = $('#js-video-canvas'),
     context2d = $canvas[0].getContext('2d'),
     timer = null;
 
